--- a/WebMQTT/assistedge-frontend/package.json
+++ b/WebMQTT/assistedge-frontend/package.json
@@ -7,10 +7,16 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.8",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-d3-cloud": "^1.0.6",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "react-wordcloud": "^1.2.7",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
